OOCSS and SMACSS

--- a/takeaguess.html
+++ b/takeaguess.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Craig</title>
+  <title>Craig Grant</title>
   <link rel="stylesheet" type="text/css" href="base.css">
-  <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" type="text/css" href="skeleton.css">
+  <link rel="stylesheet" type="text/css" href="state.css">
+  <link rel="stylesheet" type="text/css" href="module.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <a href="http://www.linkedin.com/pub/craig-grant/57/50/2ab/"><h1>Craig Stephen Grant</h1></a>
+  <a href="http://www.linkedin.com/pub/craig-grant/57/50/2ab/"><h1 class="header" >Craig Stephen Grant</h1></a>
   <p>"There is no law in the universe claiming others will understand what you're saying simply because you understand it yourself."</p>
   <div class="container">
     <div class="sixteen columns">
-      <a href="https://www.facebook.com/craig.s.grant"><img id="portrait" src="https://scontent-a-dfw.xx.fbcdn.net/hphotos-xfp1/t31.0-8/324278_2388273779539_1695566740_o.jpg"></a>
+      <a href="https://www.facebook.com/craig.s.grant"><img class="bio" id="portrait" src="https://scontent-a-dfw.xx.fbcdn.net/hphotos-xfp1/t31.0-8/324278_2388273779539_1695566740_o.jpg"></a>
     </div>
     <div class="one-third column">
-      <h2>Past</h2>
-      <a href="http://www.uscg.mil/pacarea/cgcpolarsea/"><img class="bio" src="file://localhost/Users/craiggrant/Desktop/DSC01535.JPG"></a>
+      <h2 class="header" >Past</h2>
+      <a href="http://www.uscg.mil/pacarea/cgcpolarsea/"><img class="bio" src="boat.JPG"></a>
     </div>
     <div class="one-third column">
-      <h2>Present</h2>
+      <h2 class="header" >Present</h2>
       <a href="http://acelmade.com/"><img class="bio" src="http://static.squarespace.com/static/50725805e4b03adec6671536/524657cfe4b0b4dd6e22f223/52487ed5e4b031f96a678cbf/1380482775992/acel3.jpg?format=750w"></a>
     </div>
     <div class="one-third column">
-      <h2>Future</h2>
+      <h2 class="header">Future</h2>
       <a href="https://www.facebook.com/profile.php?id=8375603&fref=photo"><img class="bio" src="https://fbcdn-sphotos-f-a.akamaihd.net/hphotos-ak-xfa1/v/t1.0-9/178964_10102574474574194_894799655_n.jpg?oh=bf0c24935a5122cea6a27ea3479e23c1&oe=547DFEA3&__gda__=1416030356_137f96e316ee3d8d9e0b4dad79767936"></a>
     </div>
   </div>
