--- a/takeaguess.html
+++ b/takeaguess.html
@@ -29,7 +29,7 @@
     </div>
   </div>
   <footer>
-    <a href="mailto:craigstephengrant@gmail.com?Subject=Hello%20again" target="_top"><em>craigstephengrant@gmail.com</em></a>
+    <a href="mailto:craigstephengrant@gmail.com?Subject=Hello%20again" target="_top" class="email">craigstephengrant@gmail.com</a>
   </footer>
 </body>
 </html>
